More job timings/metrics

--- a/stacks/container-apps/augury-alarms.yml
+++ b/stacks/container-apps/augury-alarms.yml
@@ -46,57 +46,68 @@ Resources:
       Statistic: Sum
       Threshold: 1
       TreatMissingData: breaching
+  # augury job timings
+  ForecastJobMetricFilter:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "forecast_job" }'
+      LogGroupName: !Ref AuguryForecastLogGroupName
+      MetricTransformations:
+        - MetricName: !Sub "ForecastJobElapsed${EnvironmentType}"
+          MetricNamespace: PRX/Augury
+          MetricValue: $.elapsed
+  ReallocationJobMetricFilter:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "reallocation_job" }'
+      LogGroupName: !Ref AuguryWorkerLogGroupName
+      MetricTransformations:
+        - MetricName: !Sub "ReallocationJobElapsed${EnvironmentType}"
+          MetricNamespace: PRX/Augury
+          MetricValue: $.elapsed
+  InventoryUpdateJobMetricFilter:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "inventory_update_job" }'
+      LogGroupName: !Ref AuguryWorkerLogGroupName
+      MetricTransformations:
+        - MetricName: !Sub "InventoryUpdateJobElapsed${EnvironmentType}"
+          MetricNamespace: PRX/Augury
+          MetricValue: $.elapsed
+  # forecast rscript timings
   ForecastDownloadsMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.type = "downloads" }'
+      FilterPattern: '{ $.msg = "forecast_downloads" }'
       LogGroupName: !Ref AuguryForecastLogGroupName
       MetricTransformations:
         - MetricName: !Sub "ForecastDownloadsElapsed${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
-  ForecastGeocountryMetricFilter:
+  ForecastGeocountriesMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.type = "geocountry" }'
+      FilterPattern: '{ $.msg = "forecast_geocountries" }'
       LogGroupName: !Ref AuguryForecastLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "ForecastGeocountryElapsed${EnvironmentType}"
+        - MetricName: !Sub "ForecastGeocountriesElapsed${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
-  ForecastGeosubdivMetricFilter:
+  ForecastGeosubdivsMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.type = "geosubdiv" }'
+      FilterPattern: '{ $.msg = "forecast_geosubdivs" }'
       LogGroupName: !Ref AuguryForecastLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "ForecastGeosubdivElapsed${EnvironmentType}"
+        - MetricName: !Sub "ForecastGeosubdivsElapsed${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
-  ForecastGeometroMetricFilter:
+  ForecastGeometrosMetricFilter:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.type = "geometro" }'
+      FilterPattern: '{ $.msg = "forecast_geometros" }'
       LogGroupName: !Ref AuguryForecastLogGroupName
       MetricTransformations:
-        - MetricName: !Sub "ForecastGeometroElapsed${EnvironmentType}"
-          MetricNamespace: PRX/Augury
-          MetricValue: $.elapsed
-  ForecastZonesMetricFilter:
-    Type: "AWS::Logs::MetricFilter"
-    Properties:
-      FilterPattern: '{ $.type = "zones" }'
-      LogGroupName: !Ref AuguryForecastLogGroupName
-      MetricTransformations:
-        - MetricName: !Sub "ForecastZonesElapsed${EnvironmentType}"
-          MetricNamespace: PRX/Augury
-          MetricValue: $.elapsed
-  ForecastOverallMetricFilter:
-    Type: "AWS::Logs::MetricFilter"
-    Properties:
-      FilterPattern: '{ $.type = "overall" }'
-      LogGroupName: !Ref AuguryForecastLogGroupName
-      MetricTransformations:
-        - MetricName: !Sub "ForecastOverallElapsed${EnvironmentType}"
+        - MetricName: !Sub "ForecastGeometrosElapsed${EnvironmentType}"
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
