Add elasticache permissions to CD Cfn policy

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1164,6 +1164,7 @@ Resources:
                   - cloudwatch:*
                   - ec2:*
                   - ecs:*
+                  - elasticache:*
                   - elasticloadbalancing:*
                   - events:*
                   - iam:*
