Update Node version

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -40,8 +40,7 @@ Resources:
       Layers:
         - arn:aws:lambda:us-east-1:561178107736:layer:npm-rgrove-parse-xml:1
       MemorySize: 512
-      Role: !GetAtt TowerLambdaIamRole.Arn
-      Runtime: nodejs12.x
+      Runtime: nodejs14.x
       Tags:
         Project: tower.radiotopia.fm
         Environment: !Ref EnvironmentType
@@ -49,7 +48,7 @@ Resources:
         prx:cloudformation:stack-id: !Ref AWS::StackId
       Timeout: 16
   TowerLambdaErrorAlarm:
-    Type: "AWS::CloudWatch::Alarm"
+    Type: AWS::CloudWatch::Alarm
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
@@ -73,7 +72,7 @@ Resources:
         - Name: FunctionName
           Value: !Ref TowerLambdaFunction
   TowerLambdaThrottleAlarm:
-    Type: "AWS::CloudWatch::Alarm"
+    Type: AWS::CloudWatch::Alarm
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
