--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -18,6 +18,12 @@ Resources:
   # https://tower.radiotopia.fm/api/v2/episodes.json
   HttpApi:
     Type: AWS::Serverless::HttpApi
+    Properties:
+      Tags:
+        Project: tower.radiotopia.fm
+        Environment: !Ref EnvironmentType
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
   TowerLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
