--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -1,5 +1,6 @@
 # stacks/serverless/upload.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
+Transform: AWS::Serverless-2016-10-31
 Description: File upload Lambda function
 Conditions:
   CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
