--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -38,6 +38,7 @@ Resources:
           - OPTIONS
         AllowOrigins:
           - "*"
+      Description: !Sub ${EnvironmentType} S3 upload signing API
       Tags:
         Project: tower.radiotopia.fm
         Environment: !Ref EnvironmentType
