Fix project tag

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -40,7 +40,7 @@ Resources:
           - "*"
       Description: !Sub ${EnvironmentType} S3 upload signing API
       Tags:
-        Project: tower.radiotopia.fm
+        Project: upload.radiotopia.fm
         Environment: !Ref EnvironmentType
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
