--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -85,6 +85,10 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
+  UploadHttpSigningAccessKey:
+    Type: AWS::IAM::AccessKey
+    Properties:
+      UserName: !Ref UploadHttpSigningUser
 
   #
   #
