Add upload template outputs

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -520,3 +520,14 @@ Outputs:
       The Amazon CloudFront distribution domain name that's mapped to the
       custom domain name
     Value: !GetAtt UploadRestApiDomainName.DistributionDomainName
+  SigningAccessKeyId:
+    Description: >-
+      The IAM access key ID for the access key used to generate S3 API
+      request signatures
+    Value: !Ref UploadHttpSigningAccessKey
+  SigningDomain:
+    Description: The domain for the signing service
+    Value: !Sub ${UploadHttpApi}.execute-api.${AWS::Region}.amazonaws.com
+  SigningEndpointUrl:
+    Description: The URL for the signing endpoint
+    Value: !Sub https://${UploadHttpApi}.execute-api.${AWS::Region}.amazonaws.com/signature
