--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -52,6 +52,9 @@ Resources:
         Key: lambda/PRX-upload.prx.org.zip
         Version: !Ref CodeS3ObjectVersion
       Description: File upload Lambda function
+      Environment:
+        Variables:
+          ACCESS_KEY: !Ref UploadHttpSigningAccessKey
       Events:
         ApiRequest:
           Properties:
