--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -454,6 +454,7 @@ Resources:
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
