--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -293,3 +293,7 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "pixel.prx.org.yml"]]
       TimeoutInMinutes: 15
+Outputs:
+  UploadSigningUserName:
+    Description: The user name of the IAM user whose key is used for signing
+    Value: !GetAtt UploadLambdaStack.Outputs.UploadSigningUserName
