--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -570,3 +570,6 @@ Outputs:
   SigningEndpointUrl:
     Description: The URL for the signing endpoint
     Value: !Sub https://${UploadHttpApi}.execute-api.${AWS::Region}.amazonaws.com/signature
+  UploadSigningUserName:
+    Description: The user name of the IAM user whose key is used for signing
+    Value: !Ref UploadHttpSigningUser
