Use internal signing service references for Publish

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -13,6 +13,10 @@ Conditions:
 Parameters:
   UploadSigningUserName:
     Type: String
+  UploadSigningEndpointUrl:
+    Type: String
+  UploadSigningAccessKeyId:
+    Type: String
   # VPC ########################################################################
   VPC:
     Type: "AWS::EC2::VPC::Id"
@@ -139,6 +143,10 @@ Resources:
               Value: !Ref PublishUploadsBucket
             - Name: UPLOAD_PUBLIC_ACCESS_HOST
               Value: !GetAtt PublishUploadsCloudFrontDistribution.DomainName
+            - Name: UPLOAD_SIGNING_SERVICE_URL
+              Value: !Ref UploadSigningEndpointUrl
+            - Name: UPLOAD_SIGNING_SERVICE_KEY_ID
+              Value: !Ref UploadSigningAccessKeyId
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/publish.prx.org:${PublishEcrImageTag}
           LogConfiguration:
