--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -455,6 +455,8 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
+        UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
