--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -297,3 +297,11 @@ Outputs:
   UploadSigningUserName:
     Description: The user name of the IAM user whose key is used for signing
     Value: !GetAtt UploadLambdaStack.Outputs.UploadSigningUserName
+  UploadSigningAccessKeyId:
+    Description: >-
+      The IAM access key ID for the access key used to generate S3 API
+      request signatures
+    Value: !GetAtt UploadLambdaStack.Outputs.SigningAccessKeyId
+  UploadSigningEndpointUrl:
+    Description: The user name of the IAM user whose key is used for signing
+    Value: !GetAtt UploadLambdaStack.Outputs.SigningEndpointUrl
