--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -54,7 +54,7 @@ Resources:
       Description: File upload Lambda function
       Environment:
         Variables:
-          ACCESS_KEY: !Ref UploadHttpSigningAccessKey
+          ACCESS_KEY: !GetAtt UploadHttpSigningAccessKey.SecretAccessKey
       Events:
         ApiRequest:
           Properties:
