--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -343,6 +343,7 @@ Resources:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !Sub Publish uploads ${AWS::StackName}
   DeployBucketPolicy:
+    # TODO This is poorly named
     Type: AWS::S3::BucketPolicy
     Properties:
       Bucket: !Ref PublishUploadsBucket
