Move Exchange and Networks to discrete templates

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -171,7 +171,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "exchange.prx.org.yml"]]
       TimeoutInMinutes: 5
   ExchangeSayWhenStack:
     Type: "AWS::CloudFormation::Stack"
@@ -259,7 +259,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "networks.prx.org.yml"]]
       TimeoutInMinutes: 5
   SphinxStack:
     Type: "AWS::CloudFormation::Stack"
