Pass signing service values to container stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -14,6 +14,10 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
+  UploadSigningEndpointUrl:
+    Type: String
+  UploadSigningAccessKeyId:
+    Type: String
   # Secrets ####################################################################
   SecretsInstanceDecryptPolicyArn:
     Type: String
