--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -293,6 +293,8 @@ Resources:
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         ECSServiceIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRoleArn
         EcrRegion: !Ref EcrRegion
+        UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         SecretsBase:
           Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
         SecretsInstanceDecryptPolicyArn:
