--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -148,6 +148,8 @@ Resources:
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
+        UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
@@ -238,6 +240,8 @@ Resources:
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
+        UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
