Use local signer env vars for Networks and Exchange

--- a/stacks/container-apps/networks.prx.org.yml
+++ b/stacks/container-apps/networks.prx.org.yml
@@ -250,6 +250,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: SIGNER_URL
+              Value: !Ref UploadSigningEndpointUrl
+            - Name: SIGNER_ACCESS_KEY
+              Value: !Ref UploadSigningAccessKeyId
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
           LogConfiguration:
@@ -337,6 +341,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: SIGNER_URL
+              Value: !Ref UploadSigningEndpointUrl
+            - Name: SIGNER_ACCESS_KEY
+              Value: !Ref UploadSigningAccessKeyId
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
           LogConfiguration:
