--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -268,6 +268,7 @@ Resources:
         - cache.t3.medium
         - cache.t3.micro
       CacheSubnetGroupName: !Ref CastleRedisSubnetGroup
+      Engine: Redis
       EngineVersion: 6.x
       MultiAZEnabled: true
       NumNodeGroups: 1 # 1 = cluster mode disabled, NodeGroups are Shards
