Use ECS SG for Castle Redis

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -21,8 +21,6 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet3:
     Type: "AWS::EC2::Subnet::Id"
-  VPCSecurityGroup:
-    Type: AWS::EC2::SecurityGroup::Id
   # Load Balancer ##############################################################
   PlatformALBDNSName:
     Type: String
@@ -44,6 +42,8 @@ Parameters:
   ECSServiceIAMRole:
     Type: String
   # Misc #######################################################################
+  RedisSecurityGroupSourceSecurityGroupId:
+    Type: AWS::EC2::SecurityGroup::Id
   OpsDebugMessagesSnsTopicArn:
     Type: String
   OpsErrorMessagesSnsTopicArn:
@@ -260,11 +260,11 @@ Resources:
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 6379
-          SourceSecurityGroupId: !Ref VPCSecurityGroup
+          SourceSecurityGroupId: !Ref RedisSecurityGroupSourceSecurityGroupId
           ToPort: 6379
         - IpProtocol: tcp
           FromPort: 6379
-          SourceSecurityGroupId: !Ref VPCSecurityGroup
+          SourceSecurityGroupId: !Ref RedisSecurityGroupSourceSecurityGroupId
           ToPort: 6379
   CastleRedisReplicationGroup:
     Type: AWS::ElastiCache::ReplicationGroup
