--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -926,6 +926,9 @@ Outputs:
     Description: >
       The Arn of the IAM role used by ECS instances
     Value: !GetAtt ECSInstanceIAMRole.Arn
+  ECSInstanceOutboundSecurityGroupId:
+    Description: ECS instance outbound traffic security group ID
+    Value: !GetAtt ECSInstanceOutboundSecurityGroup.GroupId
   ECSServiceAutoscaleIAMRoleArn:
     Description: >
       The ARN of the IAM role used for service auto scaling
