--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -489,7 +489,6 @@ Resources:
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
-        VPCSecurityGroup: !GetAtt VPCStack.Outputs.SecurityGroup
         PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
         PlatformALBFullName: !GetAtt LoadBalancersStack.Outputs.PlatformALBFullName
         PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
@@ -499,6 +498,7 @@ Resources:
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        RedisSecurityGroupSourceSecurityGroupId: !GetAtt ECSClusterStack.Outputs.ECSInstanceOutboundSecurityGroupId
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsDebugMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
