Output Castle Redis values

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -301,3 +301,9 @@ Outputs:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
       castle.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+  RedisPrimaryEndPointAddress:
+    Description: Redis primary end point address
+    Value: !GetAtt CastleRedisReplicationGroup.PrimaryEndPoint.Address
+  RedisPrimaryEndPointPort:
+    Description: Redis primary end point port
+    Value: !GetAtt CastleRedisReplicationGroup.PrimaryEndPoint.Port
