Pass Castle Redis address to analytics Lambda

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -251,6 +251,7 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         WildcardCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        CastleRedisPrimaryEndPointAddress: !GetAtt CastleStack.Outputs.RedisPrimaryEndPointAddress
         UploadLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
         DovetailBytesLambdaCodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
         DovetailCountsLambdaCodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
