--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -45,6 +45,8 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
   RedisImpressionsHost:
     Type: AWS::SSM::Parameter::Value<String>
+  CastleRedisPrimaryEndPointAddress:
+    Type: String
 Resources:
   # Shared IAM Role
   AnalyticsLambdaExecutionIAMRole:
@@ -197,7 +199,7 @@ Resources:
       Description: Dovetail analytics redis increments
       Environment:
         Variables:
-          REDIS_HOST: !Ref RedisHost
+          REDIS_HOST: !Ref CastleRedisPrimaryEndPointAddress
           REDIS_TTL: "7200"
           REDIS_IMPRESSIONS_HOST: !Ref RedisImpressionsHost
           REDIS_IMPRESSIONS_TTL: "90000"
