--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -28,6 +28,8 @@ Parameters:
     Type: String
   PRXUploadAccessKey:
     Type: String
+  CastleRedisPrimaryEndPointAddress:
+    Type: String
   UploadLambdaCodeS3ObjectVersion:
     Type: String
   DovetailBytesLambdaCodeS3ObjectVersion:
