Allow Castle Redis traffic from default VPC SG

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -21,6 +21,8 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet3:
     Type: "AWS::EC2::Subnet::Id"
+  VPCSecurityGroup:
+    Type: AWS::EC2::SecurityGroup::Id
   # Load Balancer ##############################################################
   PlatformALBDNSName:
     Type: String
@@ -264,7 +266,7 @@ Resources:
           ToPort: 6379
         - IpProtocol: tcp
           FromPort: 6379
-          SourceSecurityGroupId: !Ref RedisSecurityGroupSourceSecurityGroupId
+          SourceSecurityGroupId: !Ref VPCSecurityGroup
           ToPort: 6379
   CastleRedisReplicationGroup:
     Type: AWS::ElastiCache::ReplicationGroup
