Add missing parameter

--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -210,6 +210,7 @@ Resources:
         DynamodbTTL: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TTL"
         RedisHost: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/REDIS_HOST"
         RedisImpressionsHost: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/REDIS_IMPRESSIONS_HOST"
+        CastleRedisPrimaryEndPointAddress: !Ref CastleRedisPrimaryEndPointAddress
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
