Replace CIDR rule with security group for CMS memcache security group

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -39,6 +39,8 @@ Parameters:
   ECSServiceIAMRole:
     Type: String
   # Misc #######################################################################
+  MemcacheSecurityGroupSourceSecurityGroupId:
+    Type: AWS::EC2::SecurityGroup::Id
   OpsDebugMessagesSnsTopicArn:
     Type: String
   OpsErrorMessagesSnsTopicArn:
@@ -398,13 +400,9 @@ Resources:
       VpcId: !Ref VPC
       GroupDescription: !Sub CMS ${EnvironmentType} memcached security group
       SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
+        - IpProtocol: tcp
           FromPort: 11211
-          ToPort: 11211
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 11211
+          SourceSecurityGroupId: !Ref MemcacheSecurityGroupSourceSecurityGroupId
           ToPort: 11211
   CmsMemcacheCluster:
     Type: AWS::ElastiCache::CacheCluster
