--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -293,6 +293,7 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         ECSServiceIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRoleArn
+        ECSInstanceOutboundSecurityGroupId: !GetAtt ECSClusterStack.Outputs.ECSInstanceOutboundSecurityGroupId
         EcrRegion: !Ref EcrRegion
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
