Remove unused condition

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -1,20 +1,18 @@
 # stacks/certificate.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Description: >-
   Creates a wildcard ACM certificate for the standard VPC created by the root
   stack (eg *.vpc-af124354.prx.tech), as well as various other certificates
-Conditions:
-  IsProduction: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   VPC:
-    Type: "AWS::EC2::VPC::Id"
+    Type: AWS::EC2::VPC::Id
   EnvironmentType:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
 Resources:
   VpcWildcardCertificate:
-    Type: "AWS::CertificateManager::Certificate"
+    Type: AWS::CertificateManager::Certificate
     Properties:
       DomainName: "*.prx.org"
       SubjectAlternativeNames:
@@ -32,10 +30,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub "${EnvironmentType} ${VPC} wildcard"
-        - Key: "prx:cloudformation:stack-name"
+          Value: !Sub ${EnvironmentType} ${VPC} wildcard
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       ValidationMethod: DNS
 Outputs:
