--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -767,6 +767,30 @@ Resources:
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/proxy.prx.org.yml"]]
       TimeoutInMinutes: 5
 
+  SharedMemcachedStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
+        EnvironmentType: !Ref EnvironmentType
+        SourceSecurityGroupId1: !GetAtt ECSClusterStack.Outputs.ECSInstanceOutboundSecurityGroupId
+      Tags:
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/shared-memcached.yml"]]
+      TimeoutInMinutes: 5
+
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
