Pass memcached values to container stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -18,6 +18,10 @@ Parameters:
     Type: String
   UploadSigningAccessKeyId:
     Type: String
+  SharedMemcachedEndpointAddress:
+    Type: String
+  SharedMemcachedEndpointPort:
+    Type: String
   # Secrets ####################################################################
   SecretsInstanceDecryptPolicyArn:
     Type: String
