--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -294,6 +294,8 @@ Resources:
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         ECSServiceIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRoleArn
         EcrRegion: !Ref EcrRegion
+        SharedMemcachedEndpointAddress: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointPort
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
         SecretsBase:
