Pass memcached address to app stacks

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -70,6 +70,8 @@ Parameters:
   ErrorAlarmThreshold:
     Type: String
     Default: 0
+  SharedMemcachedEndpointAddress:
+    Type: String
   # App ENV #################################################################
   AppName:
     Type: String # castle, crier, cms, feeder
