--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -154,6 +154,7 @@ Resources:
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
@@ -246,6 +247,7 @@ Resources:
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
@@ -470,6 +472,7 @@ Resources:
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         OpsWarnMessagesSnsTopicArn:
           Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
